--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -605,7 +605,8 @@ body {
   position: relative;
   z-index: 4000;
   background: white;
-  padding: 100px 0; }
+  padding: 100px 0;
+  min-height: 100%; }
   @media screen and (min-width: 75em) {
     .static > .container {
       max-width: 1200px;
@@ -1378,3 +1379,43 @@ nav#overlay {
           width: 60%;
           max-width: 200px;
           margin: 0 auto; } }
+
+#terms h2 {
+  font-size: 1.5em; }
+#terms .row {
+  display: block;
+  margin: 50px 0; }
+  #terms .row::after {
+    clear: both;
+    content: "";
+    display: table; }
+  @media screen and (min-width: 40em) and (max-width: 63.9375em) {
+    #terms .row {
+      margin: 0; } }
+  @media screen and (max-width: 40em) {
+    #terms .row {
+      margin: 0; } }
+  @media screen and (min-width: 75em) {
+    #terms .row .column {
+      float: left;
+      display: block;
+      margin-right: 5%;
+      width: 47.5%;
+      @incldue omega(2n); }
+      #terms .row .column:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 64em) and (max-width: 75em) {
+    #terms .row .column {
+      float: left;
+      display: block;
+      margin-right: 5%;
+      width: 47.5%;
+      @incldue omega(2n); }
+      #terms .row .column:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 40em) and (max-width: 63.9375em) {
+    #terms .row .column {
+      width: 100%; } }
+  @media screen and (max-width: 40em) {
+    #terms .row .column {
+      width: 100%; } }
