--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -508,6 +508,7 @@ body {
 	z-index: 4000;
 	background: white;
 	padding: 100px 0;
+	min-height: 100%;
 	
 	> .container {
 		@include media($desktop) {
@@ -1512,4 +1513,53 @@ nav#overlay {
 		
 	}
 	
+}
+
+
+#terms { 
+  
+  h2 {
+    font-size: em(24);
+  }
+  
+  .row {
+    
+    @include row();
+    margin: 50px 0;
+
+    @include media($portrait) {
+      margin: 0;
+    }
+
+    @include media($mobile) {
+      margin: 0;
+    }
+
+    
+    .column {
+          
+			@include media($desktop) {
+        @include span-columns(6);
+        @incldue omega(2n);
+			}
+
+			@include media($tablet) {
+        @include span-columns(6);
+        @incldue omega(2n);
+			}
+
+			@include media($portrait) {
+        @include fill-parent();
+			}
+
+			@include media($mobile) {
+        @include fill-parent();
+			}
+
+      
+      
+    }
+    
+  }
+  
 }
