Put Twilio logo on PolyConf website

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1434,7 +1434,9 @@ nav#overlay {
 					margin-bottom: 20px;
 				}
 
-
+                &.twilio {
+                  margin-top: 6.1%;
+                }
 			}
 			
 		}
