--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1316,6 +1316,8 @@ nav#overlay {
       margin-right: 3.9603960396%;
       width: 16.8316831683%;
       margin-bottom: 20px; }
+    #partners div.sponsors.bronze .sponsor.twilio {
+      margin-top: 6.1% }
       #partners div.sponsors.bronze .sponsor:last-child {
         margin-right: 0; }
       #partners div.sponsors.bronze .sponsor:nth-child(5n) {
