Put Media Partners on PolyConf website Bitspiration & InfoQ
Former-commit-id: e4a068719f8abbd6591e6f05387cd2c0354f9022
Former-commit-id: 32066309034a81bf6a6f5245c96dfbfbd99178d1
Former-commit-id: c6f0857be1f3b8105e11a8651ddcdc545eb84c8d

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1381,6 +1381,10 @@ nav#overlay {
           width: 60%;
           max-width: 200px;
           margin: 0 auto; } }
+      #partners ul.partners .partner.bitspiration {
+        margin-top: 4.7%; }
+      #partners ul.partners .partner.infoq {
+        margin-top: 4%; }
 
 #terms h2 {
   font-size: 1.5em; }
