--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1509,7 +1509,14 @@ nav#overlay {
 				max-width: 200px;
 				margin: 0 auto;
 			}
-			
+
+            &.bitspiration {
+              margin-top: 4.7%;
+            }
+
+            &.infoq {
+              margin-top: 4%;
+            }
 			
 		}
 		
