Entry Techtrrrs logo on PolyConf website

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1385,6 +1385,8 @@ nav#overlay {
         margin-top: 4.7%; }
       #partners ul.partners .partner.infoq {
         margin-top: 4%; }
+      #partners ul.partners .partner.techtrrrs {
+        margin-top: 1.7%; }
 
 #terms h2 {
   font-size: 1.5em; }
