--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1517,6 +1517,10 @@ nav#overlay {
             &.infoq {
               margin-top: 4%;
             }
+
+            &.techtrrrs {
+              margin-top: 1.7%;
+            }
 			
 		}
 		
