Add Squirrel as a bronze sponsor

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1437,6 +1437,10 @@ nav#overlay {
                 &.twilio {
                   margin-top: 6.1%;
                 }
+
+                &.squirrel {
+                  margin-top: 7%;
+                }
 			}
 			
 		}
