--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1318,6 +1318,8 @@ nav#overlay {
       margin-bottom: 20px; }
     #partners div.sponsors.bronze .sponsor.twilio {
       margin-top: 6.1% }
+    #partners div.sponsors.bronze .sponsor.squirrel {
+      margin-top: 7% }
       #partners div.sponsors.bronze .sponsor:last-child {
         margin-right: 0; }
       #partners div.sponsors.bronze .sponsor:nth-child(5n) {
