--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1317,9 +1317,14 @@ nav#overlay {
       width: 16.8316831683%;
       margin-bottom: 20px; }
     #partners div.sponsors.bronze .sponsor.twilio {
-      margin-top: 6.1% }
+      margin-top: 6.1%; }
     #partners div.sponsors.bronze .sponsor.squirrel {
-      margin-top: 7% }
+      margin-top: 7%; }
+    #partners div.sponsors.bronze .sponsor.gamesys {
+      margin-top: 4%; }
+    #partners div.sponsors.bronze .sponsor.gamesys img {
+      width: initial;
+      margin: 0 auto; }
       #partners div.sponsors.bronze .sponsor:last-child {
         margin-right: 0; }
       #partners div.sponsors.bronze .sponsor:nth-child(5n) {
