--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1441,6 +1441,16 @@ nav#overlay {
                 &.squirrel {
                   margin-top: 7%;
                 }
+
+                &.gamesys {
+                  margin-top: 4%;
+
+                  img {
+                    width: initial;
+                    margin: 0 auto;
+                  }
+
+                }
 			}
 			
 		}
